css/home.css
#page {
    overflow: hidden;
}

body {
  /* font-family: 'Open Sans', sans-serif; */
    position: absolute;
    min-width: 100%;
    min-height: 100%;
}
/*********************************/
/* Default & Bootstrap Override  */
/*********************************/
.card-title{
    font-size: 25px;
    margin-bottom: 0;
}
.card-body{
    padding: .8rem !important;
}
.progress{
    font-size: .8rem;
}
.navbar-nav .nav-link{
    color: #FFF;
}

.navbar-brand{
    color: #16bbb4;
}
.navbar{
    background-color: #000 !important;
}
.containerOveride{
	max-width: 100%;
	padding: 0px;
}

.row{
	margin-right: 0 !important;
	margin-left: 0 !important;
}
.col-12, .col-sm-6, .col-md-4, .col-xl-3, .col-12{
	padding-left: 0px;
	padding-right: 0px;
}

.flex-container {
  display: flex;
  flex-direction: row;
}
.text-secondary{
	color: #4c4c4c !important;
}
.bg-secondary{
	background-color: #4c4c4c !important;
}

/* h3, h4, h5, h6 {
  font-family: 'Rubik', sans-serif;
} */

#carouselAutoPilotIndicators {
	max-width: 480px !important;
}

#carouselChatIndicators {
	min-width: 480px !important;
	max-height: 494px !important;
	min-height: 494px !important;
}

#carouselControlChatPrev {
 background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
}

#carouselControlChatNext {
  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
}

#carouselIndicatorChat li {
    background-color: #757575;
}

#carouselIndicatorChat .active {
    background-color: #000;
}
/*********************************/
/* End Bootstrap Override */
/*********************************/

/***********/
/* Effecs  */
/***********/
.fadeInEffect3{
	animation: fadein 3s;
}
.fadeInEffect5{
	animation: fadein 5s;
}
.fadeInEffect7{
	animation: fadein 7s;
}
.fadeInEffect9{
	animation: fadein 9s;
}
.fadeInEffect12{
	animation: fadein 12s;
}
.fadeInEffect14{
	animation: fadein 14s;
}
.fadeInEffect16{
	animation: fadein 16s;
}
.fadeInEffect20{
	animation: fadein 20s;
}

@keyframes fadein {
    from { opacity: 0; }
    to   { opacity: 1; }
}
/**************/
/* End Effecs */
/**************/

/**************/
/* Parallax   */
/**************/
.parallaxTop {
    /* The image used */
	background-image: url("https://i.imgur.com/hJDI7if.jpg");
    /* background-image: url("https://i.imgur.com/21kD2g8.jpg"); */
    /* Set a specific height */
    /* Create the parallax scrolling effect */
	background-size: cover;
	background-position: center;
	background-attachment: fixed;
	min-height: 110vh;
}
.parallaxSkill {
    /* The image used */
    /* background-image: url("https://i.imgur.com/XYEsBvp.jpg"); */
    /* background-image: url("https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=719&q=80"); */
    background-image: url("https://i.imgur.com/jN0MjB7.jpg");
    /* Set a specific height */
    /* Create the parallax scrolling effect */
	background-color: #f2f2f2;
	background-size: cover;
	background-position: center;
	background-attachment: fixed;
	min-height: 105vh;
}

.parallaxBottom{

    background-image: url("https://images.unsplash.com/photo-1514238434711-667893ab79b6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80");
    background-size: cover;
	background-position: center;
	background-attachment: fixed;
	min-height: 95vh;
}
/*****************/
/* Parallax End  */
/*****************/

/********/
/* MISC */
/********/
.footDesc{
    margin-top: 5px;
    display: table;
}
.footInfo{
    display: table-cell;
    vertical-align: middle;
}
.profIcons{
    color: #16bbb4;
}
.skillmargin{
	margin-bottom: 10px
}

.skillBarPercent{
	margin-left: 2px;
}
.topper{
	margin-top: 10vh;
}
.shadowText{
    text-shadow: #000 0px 0px 10px;
}

.shadowTextSM{
    text-shadow: #000 0px 0px 5px;
}
.progressPercent{
    margin-left: 10px;
    color: #16bbb4;
    font-family: 'Neuton', serif;
}
.paraText{
	font-family: 'Ubuntu', sans-serif;
	color: #4c4c4c;
}
.projParaText{
	font-family: 'Ubuntu', sans-serif;
    margin-left: 42%;
    margin-bottom: 10px;
	color: #FFF;
}
.profParaText{
    font-family: 'Ubuntu', sans-serif;
    color: #FFF;
}
.paraTextGH{
	font-family: 'Ubuntu', sans-serif;
	color: #637ee8;
}
.dateRange{
	font-family: 'Cinzel', serif;
}
.contactIcon{
	font-size: 2vh;
	padding-left: 1vh;
	padding-right: 1vh;
}
.list-inline{
    margin: 0;
    font-size: 11px;
}
.subHeader{
    font-size: 28px;
    margin-left: 8px;
}
.ubuntuFont{
    font-family: 'Ubuntu', sans-serif;
}

#topCoverText{
    margin-top: -258px;
}

#sectionSkillBar{
	position: relative;
}

#trio{
	position: absolute;
	bottom: 0;
	max-width: 100%;
	padding: 0px !important;
	width: 100%;
    display:flex !important;
    justify-content:center !important;
    align-items:center !important;
}
#colorIt{
    color: #16bbb4;
}
#footStyle{
	height: 5vh;
}
#bottomBox{
    margin-left: 100px;
    margin-bottom: 100px;
    margin-right: 100px;
}
#fullName{
    color: #251717;
}
#pro1, #pro2, #pro3, #pro4, #pro5{
    visibility: hidden;
}
/***********/
/* MISC End*/
/***********/


/***********/
/*  Hover  */
/**********/
.cardProjectImage:hover{
	opacity: 1.1;
}

.eduModalBtn:hover{
	opacity: .5;
}

.fa-briefcase:hover{
	opacity: .5;
}
.contactIcon:hover{
	opacity: .5;
}

.fa-award:hover{
	opacity: .5;
}
/**************/
/* Hover End */
/*************/

/*****************/
/* Project Boxes */
/*****************/
.cardProjectImage{
	opacity: .65;
}
.card{
	height: 100% !important;
}

.card-img-top{
	height: 280px;
}
/* ... */

